src/CBindings/libfdtLite.rs

unsafe extern "C" {
    #[doc = " fdt_nop_node - replace a node (subtree) with nop tags\n @fdt: pointer to the device tree blob\n @nodeoffset: offset of the node to nop\n\n fdt_nop_node() will replace a given node's representation in the\n blob, including all its subnodes, if any, with FDT_NOP tags,\n effectively removing it from the tree.\n\n This function will alter only the bytes in the blob which contain\n the node and its properties and subnodes, and will not alter or\n move any other part of the tree.\n\n returns:\n\t0, on success\n\t-FDT_ERR_BADOFFSET, nodeoffset did not point to FDT_BEGIN_NODE tag\n\t-FDT_ERR_BADMAGIC,\n\t-FDT_ERR_BADVERSION,\n\t-FDT_ERR_BADSTATE,\n\t-FDT_ERR_BADSTRUCTURE,\n\t-FDT_ERR_TRUNCATED, standard meanings"]
    pub fn fdt_nop_node(
        fdt: *mut core::ffi::c_void,
        nodeoffset: core::ffi::c_int,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    #[doc = " fdt_create_with_flags - begin creation of a new fdt\n @buf: pointer to memory allocated where fdt will be created\n @bufsize: size of the memory space at fdt\n @flags: a valid combination of FDT_CREATE_FLAG_ flags, or 0.\n\n fdt_create_with_flags() begins the process of creating a new fdt with\n the sequential write interface.\n\n fdt creation process must end with fdt_finish() to produce a valid fdt.\n\n returns:\n\t0, on success\n\t-FDT_ERR_NOSPACE, bufsize is insufficient for a minimal fdt\n\t-FDT_ERR_BADFLAGS, flags is not valid"]
    pub fn fdt_create_with_flags(
        buf: *mut core::ffi::c_void,
        bufsize: core::ffi::c_int,
        flags: u32_,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    #[doc = " fdt_create - begin creation of a new fdt\n @buf: pointer to memory allocated where fdt will be created\n @bufsize: size of the memory space at fdt\n\n fdt_create() is equivalent to fdt_create_with_flags() with flags=0.\n\n returns:\n\t0, on success\n\t-FDT_ERR_NOSPACE, bufsize is insufficient for a minimal fdt"]
    pub fn fdt_create(buf: *mut core::ffi::c_void, bufsize: core::ffi::c_int) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn fdt_resize(
        fdt: *mut core::ffi::c_void,
        buf: *mut core::ffi::c_void,
        bufsize: core::ffi::c_int,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn fdt_add_reservemap_entry(
        fdt: *mut core::ffi::c_void,
        addr: u64_,
        size: u64_,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn fdt_finish_reservemap(fdt: *mut core::ffi::c_void) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn fdt_begin_node(
        fdt: *mut core::ffi::c_void,
        name: *const core::ffi::c_char,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn fdt_property(
        fdt: *mut core::ffi::c_void,
        name: *const core::ffi::c_char,
        val: *const core::ffi::c_void,
        len: core::ffi::c_int,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    #[doc = " fdt_property_placeholder - add a new property and return a ptr to its value\n\n @fdt: pointer to the device tree blob\n @name: name of property to add\n @len: length of property value in bytes\n @valp: returns a pointer to where where the value should be placed\n\n returns:\n\t0, on success\n\t-FDT_ERR_BADMAGIC,\n\t-FDT_ERR_NOSPACE, standard meanings"]
    pub fn fdt_property_placeholder(
        fdt: *mut core::ffi::c_void,
        name: *const core::ffi::c_char,
        len: core::ffi::c_int,
        valp: *mut *mut core::ffi::c_void,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn fdt_end_node(fdt: *mut core::ffi::c_void) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn fdt_finish(fdt: *mut core::ffi::c_void) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn fdt_create_empty_tree(
        buf: *mut core::ffi::c_void,
        bufsize: core::ffi::c_int,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn fdt_open_into(
        fdt: *const core::ffi::c_void,
        buf: *mut core::ffi::c_void,
        bufsize: core::ffi::c_int,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn fdt_pack(fdt: *mut core::ffi::c_void) -> core::ffi::c_int;
}
unsafe extern "C" {
    #[doc = " fdt_add_mem_rsv - add one memory reserve map entry\n @fdt: pointer to the device tree blob\n @address: 64-bit start address of the reserve map entry\n @size: 64-bit size of the reserved region\n\n Adds a reserve map entry to the given blob reserving a region at\n address address of length size.\n\n This function will insert data into the reserve map and will\n therefore change the indexes of some entries in the table.\n\n returns:\n\t0, on success\n\t-FDT_ERR_NOSPACE, there is insufficient free space in the blob to\n\t\tcontain the new reservation entry\n\t-FDT_ERR_BADMAGIC,\n\t-FDT_ERR_BADVERSION,\n\t-FDT_ERR_BADSTATE,\n\t-FDT_ERR_BADSTRUCTURE,\n\t-FDT_ERR_BADLAYOUT,\n\t-FDT_ERR_TRUNCATED, standard meanings"]
    pub fn fdt_add_mem_rsv(
        fdt: *mut core::ffi::c_void,
        address: u64_,
        size: u64_,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    #[doc = " fdt_del_mem_rsv - remove a memory reserve map entry\n @fdt: pointer to the device tree blob\n @n: entry to remove\n\n fdt_del_mem_rsv() removes the n-th memory reserve map entry from\n the blob.\n\n This function will delete data from the reservation table and will\n therefore change the indexes of some entries in the table.\n\n returns:\n\t0, on success\n\t-FDT_ERR_NOTFOUND, there is no entry of the given index (i.e. there\n\t\tare less than n+1 reserve map entries)\n\t-FDT_ERR_BADMAGIC,\n\t-FDT_ERR_BADVERSION,\n\t-FDT_ERR_BADSTATE,\n\t-FDT_ERR_BADSTRUCTURE,\n\t-FDT_ERR_BADLAYOUT,\n\t-FDT_ERR_TRUNCATED, standard meanings"]
    pub fn fdt_del_mem_rsv(fdt: *mut core::ffi::c_void, n: core::ffi::c_int) -> core::ffi::c_int;
}
unsafe extern "C" {
    #[doc = " fdt_set_name - change the name of a given node\n @fdt: pointer to the device tree blob\n @nodeoffset: structure block offset of a node\n @name: name to give the node\n\n fdt_set_name() replaces the name (including unit address, if any)\n of the given node with the given string.  NOTE: this function can't\n efficiently check if the new name is unique amongst the given\n node's siblings; results are undefined if this function is invoked\n with a name equal to one of the given node's siblings.\n\n This function may insert or delete data from the blob, and will\n therefore change the offsets of some existing nodes.\n\n returns:\n\t0, on success\n\t-FDT_ERR_NOSPACE, there is insufficient free space in the blob\n\t\tto contain the new name\n\t-FDT_ERR_BADOFFSET, nodeoffset did not point to FDT_BEGIN_NODE tag\n\t-FDT_ERR_BADMAGIC,\n\t-FDT_ERR_BADVERSION,\n\t-FDT_ERR_BADSTATE, standard meanings"]
    pub fn fdt_set_name(
        fdt: *mut core::ffi::c_void,
        nodeoffset: core::ffi::c_int,
        name: *const core::ffi::c_char,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    #[doc = " fdt_setprop_namelen - create or change a property\n @fdt: pointer to the device tree blob\n @nodeoffset: offset of the node whose property to change\n @name: name of the property to change\n @namelen: length of the name\n @val: pointer to data to set the property value to\n @len: length of the property value\n\n fdt_setprop_namelen() sets the value of the named property in the given\n node to the given value and length, creating the property if it\n does not already exist.\n\n This function may insert or delete data from the blob, and will\n therefore change the offsets of some existing nodes.\n\n returns:\n\t0, on success\n\t-FDT_ERR_NOSPACE, there is insufficient free space in the blob to\n\t\tcontain the new property value\n\t-FDT_ERR_BADOFFSET, nodeoffset did not point to FDT_BEGIN_NODE tag\n\t-FDT_ERR_BADLAYOUT,\n\t-FDT_ERR_BADMAGIC,\n\t-FDT_ERR_BADVERSION,\n\t-FDT_ERR_BADSTATE,\n\t-FDT_ERR_BADSTRUCTURE,\n\t-FDT_ERR_BADLAYOUT,\n\t-FDT_ERR_TRUNCATED, standard meanings"]
    pub fn fdt_setprop_namelen(
        fdt: *mut core::ffi::c_void,
        nodeoffset: core::ffi::c_int,
        name: *const core::ffi::c_char,
        namelen: core::ffi::c_int,
        val: *const core::ffi::c_void,
        len: core::ffi::c_int,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    #[doc = " fdt_setprop_placeholder_namelen - allocate space for a property\n @fdt: pointer to the device tree blob\n @nodeoffset: offset of the node whose property to change\n @name: name of the property to change\n @namelen: length of the name\n @len: length of the property value\n @prop_data: return pointer to property data\n\n fdt_setprop_placeholder_namelen() allocates the named property in the given node.\n If the property exists it is resized. In either case a pointer to the\n property data is returned.\n\n This function may insert or delete data from the blob, and will\n therefore change the offsets of some existing nodes.\n\n returns:\n\t0, on success\n\t-FDT_ERR_NOSPACE, there is insufficient free space in the blob to\n\t\tcontain the new property value\n\t-FDT_ERR_BADOFFSET, nodeoffset did not point to FDT_BEGIN_NODE tag\n\t-FDT_ERR_BADLAYOUT,\n\t-FDT_ERR_BADMAGIC,\n\t-FDT_ERR_BADVERSION,\n\t-FDT_ERR_BADSTATE,\n\t-FDT_ERR_BADSTRUCTURE,\n\t-FDT_ERR_BADLAYOUT,\n\t-FDT_ERR_TRUNCATED, standard meanings"]
    pub fn fdt_setprop_placeholder_namelen(
        fdt: *mut core::ffi::c_void,
        nodeoffset: core::ffi::c_int,
        name: *const core::ffi::c_char,
        namelen: core::ffi::c_int,
        len: core::ffi::c_int,
        prop_data: *mut *mut core::ffi::c_void,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    #[doc = " fdt_appendprop - append to or create a property\n @fdt: pointer to the device tree blob\n @nodeoffset: offset of the node whose property to change\n @name: name of the property to append to\n @val: pointer to data to append to the property value\n @len: length of the data to append to the property value\n\n fdt_appendprop() appends the value to the named property in the\n given node, creating the property if it does not already exist.\n\n This function may insert data into the blob, and will therefore\n change the offsets of some existing nodes.\n\n returns:\n\t0, on success\n\t-FDT_ERR_NOSPACE, there is insufficient free space in the blob to\n\t\tcontain the new property value\n\t-FDT_ERR_BADOFFSET, nodeoffset did not point to FDT_BEGIN_NODE tag\n\t-FDT_ERR_BADLAYOUT,\n\t-FDT_ERR_BADMAGIC,\n\t-FDT_ERR_BADVERSION,\n\t-FDT_ERR_BADSTATE,\n\t-FDT_ERR_BADSTRUCTURE,\n\t-FDT_ERR_BADLAYOUT,\n\t-FDT_ERR_TRUNCATED, standard meanings"]
    pub fn fdt_appendprop(
        fdt: *mut core::ffi::c_void,
        nodeoffset: core::ffi::c_int,
        name: *const core::ffi::c_char,
        val: *const core::ffi::c_void,
        len: core::ffi::c_int,
    ) -> core::ffi::c_int;
}
